# madr

./: .coverage  .gitignore  Dockerfile  compose.yaml  db.sqlite3  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini
core/: admin.py
core/migrations/: 0001_initial.py
madr/: .coverage  api.py  asgi.py  settings.py  urls.py  wsgi.py
madr/core/: api.py  apps.py
madr/routers/: .coverage  conftest.py
madr/routers/auths/: api.py  apps.py  schemas.py
madr/routers/auths/tests/: tests_auth.py
madr/routers/contas/: admin.py  api.py  apps.py  factories.py  models.py  schemas.py
madr/routers/contas/migrations/: 0001_initial.py
madr/routers/contas/tests/: conftest.py  tests_db.py  tests_user.py
madr/routers/livros/: api.py  apps.py
madr/routers/romancistas/: api.py  apps.py
