[project]
name = "madr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions>=3.2.3",
    "django-ninja>=1.3.0",
    "django-ninja-jwt>=5.3.5",
    "factory-boy>=3.3.3",
    "jwt>=1.3.1",
    "pydantic[email]>=2.10.6", # Adicionando o extra [email] para instalar o email-validator
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-sugar>=1.0.0",
]
